--- a/experimental_results_aggregation_latex_table_seabon.ipynb
+++ b/experimental_results_aggregation_latex_table_seabon.ipynb
@@ -12,7 +12,7 @@
     "## Raw Data\n",
     "Ideally prepare your data (model output, raw experimental results) in a format that can easily transformed into a DataFrame.  \n",
     "Pandas has a variety of ways to import data, but we won't go through all methods and variants here (https://pandas.pydata.org/docs/reference/io.html).  \n",
-    "Just keep in mind, anything that is somehow in a table format (some rows an columns) is in principle very simple to process."
+    "Just keep in mind, anything that is somehow in a table format (some rows and columns) is in principle very simple to process."
    ]
   },
   {
@@ -132,7 +132,7 @@
    "source": [
     "### Preferred DataFrame formats\n",
     "Initially one row usually represents one sample (of a dataset) but the data types of one sample might not be atomic (e.g. a list of values instead of a single string or number), i.e., nested data. \n",
-    "Note, that sometimes it might by practicable to process this columns as they are, for instance by writing a custom function that proceses one sample and then to use DataFrame[\"column\"].apply(lambda col: foo(col)).\n",
+    "Note, that sometimes it might by practicable to process this columns as they are, for instance by writing a custom function that proceses one sample and then to use ``df[\"column\"].apply(lambda col: foo(col))``.\n",
     "\n",
     "However, to group, filter, or aggregate based on nested content can be painful, especially if several variables/columns are involved. For this reason, it is often helpful to transform the DataFrame into the so-called \"long format\". A DataFrame in \"long format\" if each variable is a column and each observation a row. \n",
     "\n",
